z-index fixes

--- a/src/components/TimeTable/TimeTable.module.css
+++ b/src/components/TimeTable/TimeTable.module.css
@@ -94,6 +94,7 @@
     margin: 0;
     text-align: center;
     font-size: 0.8em;
+    z-index: 10;
 }
 
 .filter {
